data/derived/sp14/progs/unify/prog0597.ml.out
Characters 513-517:
  | Crazy(e1, e2, e3) -> if (e1 > e2) then abs_float(eval(e3)) else (-abs_float(eval(e3)));;
                                                         ^^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
